--- a/test1/test_01.html
+++ b/test1/test_01.html
@@ -301,33 +301,51 @@
                 new ol.layer.Tile({
                     source:new ol.source.OSM()
                 }),
-                /*new ol.layer.Tile({
-                    source: new ol.source.XYZ({ //http://188.131.132.10/s/imageryviz/96446d97f5d7356c550efa87d0fdb101/11/1615/946.png?retina=&ak=MDBhN2FmZmRhZDQxNDk5MmIyYWYzZjVjY2M4MzcyM2E
-                        url: 'https://geohey.com/s/dataviz/af4cf6e979894bfe7a6ad8dbb9abb546/' +
-                        '{z}/{x}/{y}.png?ak=OGJkMGQwNTVlNzYzNDA0NmIwNDYxZDY4YjQwYmJlYzc&retina=@2x',
-                        tilePixelRatio: 2,//表示加载高清图显示
-                        crossOrigin:null
+
+                /*new ol.layer.Image({
+                    source: new ol.source.ImageWMS({
+                        url: 'http://192.168.1.165:6080/arcgis/services/heritage/dxm_tif/ImageServer/WMSServer',
+                        params: {
+                            'FORMAT': 'image/png',
+                            'VERSION': '1.3.0',
+                            STYLES: '',
+                            LAYERS: '0',
+                        },
+                        ratio: 1,
+                        //serverType: 'geoserver'
                     })
-                }),*/              //21bf101494294f0cd5a5c285c3ede111
-                new ol.layer.Tile({//00ade9672f0e23b976401c7e80124159 //96446d97f5d7356c550efa87d0fdb101
+                }),*/
+                new ol.layer.Tile({
                     source: new ol.source.XYZ({
-                        //    http://188.131.132.10/s/imageryviz/21bf101494294f0cd5a5c285c3ede111/11/1615/946.png?retina=&ak=MDBhN2FmZmRhZDQxNDk5MmIyYWYzZjVjY2M4MzcyM2E
-                        url: 'http://188.131.132.10/s/imageryviz/217a569c67b97eecd2bb62662579f4df/' +
-                        '{z}/{x}/{y}.png?ak=MDBhN2FmZmRhZDQxNDk5MmIyYWYzZjVjY2M4MzcyM2E&retina=@2x',
-                        //projection:'EPSG:3857',
-                        tilePixelRatio: 1,// 2表示加载高清图显示
+                        url: 'https://s1.geohey.com/s/dataviz/141432da369191dc6aa37f9f767e810b/{z}/{x}/{y}.png?retina=&ak=OWYwMGUzYzRmZWRmNGE2NDliMDJkMzliY2Q2MDg3NjQ',
+                        tilePixelRatio: 2,//表示加载高清图显示
                         crossOrigin:null
                     })
                 }),
-                /*new ol.layer.Tile({
-                    source: new ol.source.XYZ({
-                        url: 'https://geohey.com/s/dataviz/fa98fd9829c93e9ce3b45c59b13b6083' +
-                        '/{z}/{x}/{y}.png?retina=@2x&ak=MTVjMWRmOTkyN2Y2NGU1YjhiODgzMDM4MDVkMWFiNWM',
-                        tilePixelRatio: 2,//表示加载高清图显示
-                        crossOrigin:null
+                new ol.layer.Image({
+                    /*source: new ol.source.ImageWMS({
+                        url: 'http://localhost:8080/geoserver/test/wms',
+                        layers: "test:daxiongmaoshp",
+                        params: {
+                            "transparent": true,
+                            "format": "image/png",
+                            "srs": "EPSG:3875",
+                            "service": "WMS"
+                        }
+                    })*/
+                    source: new ol.source.ImageWMS({
+                        ratio: 1,
+                        url: 'http://localhost:8080/geoserver/test/wms',
+                        //layers: "test:daxiongmaoshp",
+                        params: {'FORMAT': "image/png",
+                            'VERSION': '1.1.0',
+                            "STYLES": '',
+                            "LAYERS": "test:daxiongmaoshp",
+                            "exceptions": 'application/vnd.ogc.se_inimage',
+                        }
                     })
-                }),*/
 
+                }),
 
             ],
             view:new ol.View({
@@ -344,7 +362,9 @@
         map.addControl(mousePositionControl)
         map.addControl(scaleLineControl)
         var pos = ol.proj.transform([0,0], 'EPSG:4326', 'EPSG:3857');
-        //console.log(pos)
+
+        var pos1 = ol.proj.transform([695350.8362,4201141.9666],  'EPSG:3857','EPSG:4326',);
+        console.log(pos1)
         /*鹰眼*/
         var overviewMapControl = new ol.control.OverviewMap({
             className:'ol-overviewmap ol-custom-overviewmap',
